--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
-    "cleanUrls": true,
     "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/index.html"
-      }
+      { "source": "/(.*)", "destination": "/" }
     ]
   }
   
