--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@supabase/supabase-js": "^2.57.0",
         "framer-motion": "^12.23.16",
         "leaflet": "^1.9.4",
+        "lucide-react": "^0.544.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-helmet-async": "^2.0.5",
