--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "dev:server": "nodemon server.js",
+        "start:server": "node server.js",
         "build": "vite build",
         "preview": "vite preview",
+        "test": "jest",
+        "test:watch": "jest --watch",
         "lint": "eslint \"src/**/*.{js,jsx}\"",
         "format": "prettier --write ."
     },
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "@heroicons/react": "^2.2.0",
         "@supabase/supabase-js": "^2.57.0",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
+        "express": "^4.21.2",
         "framer-motion": "^12.23.16",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.544.0",
@@ -23,10 +31,14 @@
         "react-router-dom": "^6.26.2"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.0",
         "@vitejs/plugin-react": "^4.3.1",
         "eslint": "^9.9.0",
         "eslint-plugin-react": "^7.35.0",
         "eslint-plugin-react-hooks": "^5.1.0",
+        "jest-environment-jsdom": "^30.2.0",
+        "nodemon": "^3.1.10",
         "prettier": "^3.3.3",
         "vite": "^5.4.19"
     }
