--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "react-dom": "^18.3.1",
         "react-helmet-async": "^2.0.5",
         "react-leaflet": "^4.2.1",
-        "react-router-dom": "^6.26.2"
+        "react-markdown": "^10.1.0",
+        "react-router-dom": "^6.26.2",
+        "remark-gfm": "^4.0.1"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.9.1",
